deploy/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bib
  labels:
    app.kubernetes.io/part-of: bib
